# repo-search-engine

./: .gitignore  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: config.py  main.py  runtime.py
backend/app/api/: routes.py
backend/app/database/: base.py  connection.py  records.py
backend/app/models/: document_sync_summary.py  indexing_summary.py  search_index.py  search_result.py  source_file.py  tokenized_line.py
backend/app/schemas/: search.py
backend/app/services/: autocomplete_index.py  bm25_ranker.py  code_tokenizer.py  indexing_service.py  inverted_index.py  redis_search_cache.py  repository_crawler.py  runtime_search_state.py  search_cache.py  search_cache_key.py  search_cache_serialization.py  search_engine.py  search_service.py
backend/app/stores/: document_store.py  indexing_run_store.py  repository_store.py
backend/app/tests/: conftest.py  test_api.py  test_autocomplete_index.py  test_benchmark_search.py  test_bm25_ranker.py  test_cache_benchmark.py  test_code_tokenizer.py  test_document_store.py  test_indexing_run_store.py  test_indexing_service.py  test_inverted_index.py  test_redis_search_cache.py  test_repository_crawler.py  test_repository_store.py  test_search_cache_key.py  test_search_cache_serialization.py  test_search_engine.py  test_search_service.py
backend/migrations/: env.py
backend/migrations/versions/: 4009108aa0ea_create_repositories_table.py  6cec963c0c30_create_indexing_runs_table.py  (+1 more)
backend/scripts/: benchmark_search.py
(+7 files in other folders)
